--- a/src/r/eda_all_genes.Rmd
+++ b/src/r/eda_all_genes.Rmd
@@ -26,7 +26,7 @@ library(reticulate)
 #install.packages('readxl')
 library(readxl)
 
-install.packages('sctransform')
+#install.packages('sctransform')
 library(sctransform)
 ```
 
@@ -85,9 +85,7 @@ VlnPlot(lung,
         ncol=2)
 ```
 
-
-
-## 5. Eliminating confounding factors
+# 5. Eliminating confounding factors
 First, we need to identify mitochondrial genes that may be confounding factors (based on the experimental design). We'll also normalize based on this known confounding factor.
 
 Note - these need to be identified using Mitocarta.
@@ -130,12 +128,11 @@ lung = ScaleData(lung,
 Now let's run PCA.
 ```{r}
 lung = RunPCA(object=lung,
-              npcs=100,
-              features=VariableFeatures(object=lung),
+              npcs=50,
               verbose=FALSE)
 ```
 
-We can visualize the elbow plot.
+We can visualize the elbow plot to see how much information is embedded.
 ```{r}
 ElbowPlot(lung, ndims=100) +
   theme_minimal() +
@@ -143,7 +140,7 @@ ElbowPlot(lung, ndims=100) +
        x="Principle Components", 
        y="Standard deviations")
 ```
-We can also visualize the DimPlot()
+We can also visualize the embedding using the `DimPlot()` function.
 ```{r}
 DimPlot(object=lung, 
         reduction="pca") +
@@ -158,6 +155,8 @@ VizDimLoadings(lung,
                dims=1:10, 
                reduction="pca")
 ```
+
+NOw let's visualize different principle components with up and downregulated genes.
 ```{r}
 DimHeatmap(lung,
            dims=1:10, 
@@ -165,6 +164,7 @@ DimHeatmap(lung,
            balanced=TRUE)
 ```
 # 8. Perform some clustering
+We'll now identify clusters and create the shared nearest neighbor embedding.
 ```{r}
 lung = FindNeighbors(lung, 
                      dims=1:50,
@@ -174,6 +174,7 @@ lung = FindClusters(lung,
 ```
 
 # 9. Perform UMAP
+Let's run UMAP.
 ```{r}
 lung = RunUMAP(lung, 
                dims=1:50)
@@ -189,8 +190,7 @@ DimPlot(lung,
         label=TRUE,
         repel=TRUE,
         label.size=4,
-        na.value = "grey50") +
-  NoLegend()
+        na.value = "grey50")
 ```
 Let's visualize some specific genes
 ```{r}
@@ -203,7 +203,7 @@ RidgePlot(lung, features=genes_of_interests)
 Let's also visualize the data on the dimension reduction
 ```{r}
 FeaturePlot(lung, 
-            features=,
+            features=genes_of_interests,
             label=TRUE,
             repel=TRUE,
             label.size=4)
