--- a/src/r/eda_all_genes.Rmd
+++ b/src/r/eda_all_genes.Rmd
@@ -42,7 +42,9 @@ This code block does the following with the lung dataset:
 Note that there were cell-type annotations in the meta data. I used those for visualization.
 ```{r}
 rm(list=ls())
-load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+#load("C:/Users/scott/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+load("D:/Data/scRNASeq/shea/lung.robj", verbose=TRUE)
+
 orig.ident = lung@active.ident
 ```
 
@@ -123,6 +125,10 @@ lung = ScaleData(lung,
                  features=all.genes)
 ```
 
+```{r}
+lung = SCTransform(lung)
+```
+
 # 7. Run Principle Component Analysis
 
 Now let's run PCA.
@@ -190,7 +196,9 @@ DimPlot(lung,
         label=TRUE,
         repel=TRUE,
         label.size=4,
-        na.value = "grey50")
+        na.value = "grey50") +
+  labs(x="UMAP 1", y="UMAP 2", title="All Immune Cell UMAP") +
+  NoLegend()
 ```
 Let's visualize some specific genes
 ```{r}
